[FEAT] add notification setting in study group