@@ -1,36 +1,29 @@
 package com.fourback.bemajor.domain.studygroup.service;
 
 import com.fourback.bemajor.domain.chat.repository.GroupChatMessageRepository;
+import com.fourback.bemajor.domain.studyGroupNotification.repository.StudyGroupNotificationRepository;
+import com.fourback.bemajor.domain.studyGroupNotification.service.StudyGroupNotificationService;
+import com.fourback.bemajor.domain.studygroup.dto.StudyGroupDto;
 import com.fourback.bemajor.domain.studygroup.dto.response.StudyGroupApplicationCountResponse;
 import com.fourback.bemajor.domain.studygroup.dto.response.StudyGroupApplicationResponse;
+import com.fourback.bemajor.domain.studygroup.dto.response.StudyGroupDetailsResponseDto;
 import com.fourback.bemajor.domain.studygroup.dto.response.StudyGroupRoleResponse;
-import com.fourback.bemajor.domain.studygroup.dto.StudyGroupDto;
 import com.fourback.bemajor.domain.studygroup.entity.StudyGroup;
 import com.fourback.bemajor.domain.studygroup.entity.StudyJoinApplication;
 import com.fourback.bemajor.domain.studygroup.entity.StudyJoined;
-import com.fourback.bemajor.domain.studygroup.repository.StudyJoinApplicationRepository;
-import com.fourback.bemajor.domain.user.dto.response.UserResponseDto;
-import com.fourback.bemajor.domain.user.entity.UserEntity;
-import com.fourback.bemajor.domain.studygroup.dto.StudyGroupDto;
-import com.fourback.bemajor.global.common.enums.RedisKeyPrefixEnum;
-import com.fourback.bemajor.global.common.service.RedisService;
 import com.fourback.bemajor.domain.studygroup.repository.StudyGroupRepository;
+import com.fourback.bemajor.domain.studygroup.repository.StudyJoinApplicationRepository;
 import com.fourback.bemajor.domain.studygroup.repository.StudyJoinedRepository;
 import com.fourback.bemajor.domain.user.dto.response.UserResponseDto;
 import com.fourback.bemajor.domain.user.entity.UserEntity;
 import com.fourback.bemajor.domain.user.repository.UserRepository;
-import com.fourback.bemajor.global.common.enums.RedisKeyPrefixEnum;
-import com.fourback.bemajor.global.common.service.RedisService;
 import com.fourback.bemajor.global.exception.kind.NotFoundException;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
-import org.springframework.web.socket.WebSocketSession;
 
 import java.util.List;
-import java.util.Map;
 import java.util.Optional;
-import java.util.Set;
 import java.util.stream.Collectors;
 
 @Service
@@ -39,10 +32,10 @@ public class StudyJoinedService {
     private final StudyJoinedRepository studyJoinedRepository;
     private final UserRepository userRepository;
     private final StudyGroupRepository studyGroupRepository;
-    private final RedisService redisService;
     private final GroupChatMessageRepository groupChatMessageRepository;
-    private final Map<Long, Set<WebSocketSession>> studyGrupIdSessionsMap;
     private final StudyJoinApplicationRepository studyJoinApplicationRepository;
+    private final StudyGroupNotificationService studyGroupNotificationService;
+    private final StudyGroupNotificationRepository studyGroupNotificationRepository;
 
     /**
      * 스터디 그룹 참여 신청
@@ -76,9 +69,7 @@ public class StudyJoinedService {
         studyJoinedRepository.save(new StudyJoined(studyGroup,user));
         studyJoinApplicationRepository.deleteById(studyJoinApplicationId);
 
-        if (!studyGrupIdSessionsMap.get(studyGroupId).isEmpty()) {
-            redisService.addLongMember(RedisKeyPrefixEnum.DISCONNECTED, studyGroupId, userId);
-        }
+        studyGroupNotificationService.enableNotification(studyGroupId,userId);
     }
 
     /**
@@ -128,17 +119,17 @@ public class StudyJoinedService {
     public void exitStudyGroup(Long studyGroupId, Long userId) {
         List<Long> idsByStudyGroupIdAndOauth2Id = studyJoinedRepository.findIdsByStudyGroupIdAndOauth2Id(studyGroupId, userId);
         studyJoinedRepository.deleteByIds(idsByStudyGroupIdAndOauth2Id);
-        if (!studyGrupIdSessionsMap.get(studyGroupId).isEmpty())
-            redisService.removeLongMember(RedisKeyPrefixEnum.DISCONNECTED, studyGroupId, userId);
+        studyGroupNotificationService.disableNotification(studyGroupId, userId);
         groupChatMessageRepository.deleteMessagesByStudyGroupIdAndReceiverId(userId, studyGroupId);
     }
 
-    public List<UserResponseDto> getAllStudyUser(Long studyGroupId) {
-        Optional<StudyGroup> studyGroupOptional = studyGroupRepository.findById(studyGroupId);
-        if (studyGroupOptional.isEmpty()) {
-            throw new NotFoundException("no such study group.");
-        }
-        return studyGroupOptional.get().getStudyJoineds().stream().map(StudyJoined::getUser).map(UserEntity::toUserResponseDto).collect(Collectors.toList());
+    public StudyGroupDetailsResponseDto getDetails(Long studyGroupId, Long userId) {
+        List<StudyJoined> studyJoined = studyJoinedRepository.findByStudyGroup_Id(studyGroupId);
+        List<UserResponseDto> userResponses = studyJoined.stream().map(StudyJoined::getUser)
+                .map(UserEntity::toUserResponseDto).toList();
+        boolean isEnableNotification = studyGroupNotificationRepository
+                .existsByStudyGroupIdAndUserUserId(studyGroupId,userId);
+        return StudyGroupDetailsResponseDto.of(userResponses, isEnableNotification);
     }
 
     public List<StudyGroupDto> getAllMyGroups(Long userId) {
